start and end can now be provided as datetime object or string in the format yyyy-mm-dd[-hh-mm-ss]

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ dates.py
 coinmarketcappy.egg-info/
 dist/
 coinmarketcappy/test/historical_snaps.json
+coinmarketcappy/test/historical_20180429.json
